<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_and_privacy_setting"
                    android:textColor="#0000ff" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/account_and_security_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_and_security_setting"
                        android:textColor="#333333"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/account_and_security_text_setting"
                        android:textSize="12dp" />

                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/item_line" />

            <LinearLayout
                android:id="@+id/clean_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="清除存储空间"
                        android:textColor="#333333"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="清理缓存"
                        android:textSize="12dp" />

                </LinearLayout>

            </LinearLayout>



            <include layout="@layout/item_line" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_and_help_setting"
                    android:textColor="#0000ff" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/function_introduction_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg"
                android:clickable="true"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/functional_introduction_setting"
                        android:textColor="#333333"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/functional_introduction_text_setting"
                        android:textSize="12dp" />

                </LinearLayout>

            </LinearLayout>


            <include layout="@layout/item_line" />

            <LinearLayout
                android:id="@+id/check_update_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_update_setting"
                        android:textColor="#333333"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_update_text_setting"
                        android:textSize="12dp" />

                </LinearLayout>

            </LinearLayout>


            <include layout="@layout/item_line" />

            <LinearLayout
                android:id="@+id/feedback_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg"
                android:clickable="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback_setting"
                        android:textColor="#333333"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feedback_text_setting"
                        android:textSize="12dp" />

                </LinearLayout>

            </LinearLayout>


            <include layout="@layout/item_line" />

            <LinearLayout
                android:id="@+id/logout_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_bg"
                android:clickable="true"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/logout_setting"
                        android:textColor="#ff0000"
                        android:textSize="16dp" />

                </LinearLayout>


                <include layout="@layout/item_line" />

            </LinearLayout>



        </LinearLayout>


    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="© 2019 atzlt.top"
            android:textSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="All rights reserved."
            android:textSize="12dp" />


    </LinearLayout>


</LinearLayout>